--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="A little bit about Zahin 😉"
     />
+    <meta 
+    property="og:image" 
+    content="%PUBLIC_URL%me.jpg"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
