--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,30 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyAGKwSNNQHDWtNYuY5TKiuaoCiLB6d68iw",
+      authDomain: "portfolio-e0904.firebaseapp.com",
+      databaseURL: "https://portfolio-e0904.firebaseio.com",
+      projectId: "portfolio-e0904",
+      storageBucket: "portfolio-e0904.appspot.com",
+      messagingSenderId: "745034996254",
+      appId: "1:745034996254:web:e475964b06cd42cdf4ec0f",
+      measurementId: "G-N3JR5MMYQM"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
   </body>
 </html>
