--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="A little bit about Zahin 😉"
-    />
-    <meta 
-    property="og:image" 
-    content="%PUBLIC_URL%me.jpg"/>
+    <meta name="description" content="A little bit about Zahin 😉" />
+    <meta property="og:image" content="%PUBLIC_URL%me.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -41,30 +39,30 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
 
-  <!-- TODO: Add SDKs for Firebase products that you want to use
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
       https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-analytics.js"></script>
 
-  <script>
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    var firebaseConfig = {
-      apiKey: "AIzaSyAGKwSNNQHDWtNYuY5TKiuaoCiLB6d68iw",
-      authDomain: "portfolio-e0904.firebaseapp.com",
-      databaseURL: "https://portfolio-e0904.firebaseio.com",
-      projectId: "portfolio-e0904",
-      storageBucket: "portfolio-e0904.appspot.com",
-      messagingSenderId: "745034996254",
-      appId: "1:745034996254:web:e475964b06cd42cdf4ec0f",
-      measurementId: "G-N3JR5MMYQM"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
-  </script>
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyAGKwSNNQHDWtNYuY5TKiuaoCiLB6d68iw",
+        authDomain: "portfolio-e0904.firebaseapp.com",
+        databaseURL: "https://portfolio-e0904.firebaseio.com",
+        projectId: "portfolio-e0904",
+        storageBucket: "portfolio-e0904.appspot.com",
+        messagingSenderId: "745034996254",
+        appId: "1:745034996254:web:e475964b06cd42cdf4ec0f",
+        measurementId: "G-N3JR5MMYQM",
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
   </body>
 </html>
